--- a/index.html
+++ b/index.html
@@ -333,13 +333,13 @@
           />
         </li>
       </ul>
-    </footer>
 
-    <!-- <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div> -->
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">venkatesh.b</a>.
+      </div>
+    </footer>
   </body>
 </html>
